# physics-art-engine

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md  README_PRODUCTION.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  sonar-project.properties
.claude/: CPP_STANDARDS.md  DESIGN_PATTERNS.md  PERFORMANCE_TRADEOFFS.md  README.md  SYSTEM_ARCHITECTURE.md  TYPESCRIPT_STANDARDS.md  UI_AESTHETIC.md
.github/workflows/: ci-cd.yml
.husky/: pre-commit
backend/: Dockerfile  README.md  package-lock.json  package.json  test-websocket-client.js
backend/.husky/: pre-commit
backend/src/: app.module.ts  app.service.spec.ts  app.service.ts  main.ts
backend/src/config/: database.config.ts
backend/src/modules/simulation/: simulation.controller.ts  simulation.service.ts
backend/src/modules/stream/: stream.gateway.ts  (+2 more)
backend/src/simulation/: simulation.controller.spec.ts  simulation.module.ts  simulation.processor.spec.ts  simulation.processor.ts  simulation.service.spec.ts
backend/tests/: app.service.test.ts
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ControlPanel.css  ControlPanel.tsx  Oscilloscope.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: simulation.ts
scripts/: build.sh  dev.sh  test.sh
simulation-engine/: .gitignore  CMakeLists.txt
simulation-engine/include/: particle.h  simulation.h  vector2d.h
simulation-engine/src/: main.cpp  simulation.cpp
(+8 files in other folders)
